--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,31 @@
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.datasource.url=jdbc:mysql://localhost:3306/WaterManagement?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=C@0qu0c7ruc
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
 
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
+
+server.port=8081
+
+
+#Cac thao tac voi DB
+spring.jpa.hibernate.ddl-auto = none
+#spring.jpa.hibernate.ddl-auto = create
+#spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.hibernate.ddl-auto = create-drop
+
+#Chi dinh loai DB du dung
+#Cap quyen thao tac voi DB
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLMyISAMDialect
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.format_sql = true
+
+
+
+
+#Chi dinh  moi truong
+#spring.profiles.active = uat
+spring.datasource.url = jdbc:mysql://localhost:3306/water
+spring.datasource.username = root
+spring.datasource.password = 123456
+
 
