--- a/pom.xml
+++ b/pom.xml
@@ -60,12 +60,65 @@
         <artifactId>hibernate-core</artifactId>
         <version>6.1.7.Final</version> <!-- Thêm hoặc cập nhật phiên bản Hibernate nếu chưa có -->
     </dependency>
+	
+	<dependency>
+  		  <groupId>org.modelmapper</groupId>
+  		  <artifactId>modelmapper</artifactId>
+   		  <version>3.2.0</version> <!-- hoặc version mới nhất -->
+	</dependency>
+
+
+	
 
     <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-test</artifactId>
         <scope>test</scope>
     </dependency>
+    
+    <dependency>
+   		 <groupId>javax.servlet</groupId>
+   		 <artifactId>javax.servlet-api</artifactId>
+   		 <version>4.0.1</version>  <!-- hoặc 3.1.0 nếu dùng Tomcat 8 -->
+   		 <scope>provided</scope>
+	</dependency>
+	
+	<dependency>
+    	<groupId>org.springframework.boot</groupId>
+   		 <artifactId>spring-boot-starter-security</artifactId>
+	</dependency>
+	
+	<dependency>
+   		 <groupId>jakarta.validation</groupId>
+   		 <artifactId>jakarta.validation-api</artifactId>
+	</dependency>
+	
+	<dependency>
+   		<groupId>org.hibernate.validator</groupId>
+    	<artifactId>hibernate-validator</artifactId>
+   		<version>8.0.1.Final</version>
+	</dependency>
+	
+	<dependency>
+    	<groupId>org.glassfish</groupId>
+   		<artifactId>jakarta.el</artifactId>
+  	 	<version>4.0.2</version>
+	</dependency>
+
+    
+    <dependency>
+  	 	 <groupId>org.projectlombok</groupId>
+   		 <artifactId>lombok</artifactId>
+  	   	 <scope>provided</scope>
+	</dependency>
+
+    <dependency>
+    	 <groupId>org.springframework.boot</groupId>
+   		 <artifactId>spring-boot-starter-web</artifactId>
+	</dependency>
+
+
+    
 </dependencies>
 
 
