--- a/pom.xml
+++ b/pom.xml
@@ -54,12 +54,6 @@
         <scope>runtime</scope>
     </dependency>
 
-    <!-- Hibernate core -->
-    <dependency>
-        <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-core</artifactId>
-        <version>6.1.7.Final</version> <!-- Thêm hoặc cập nhật phiên bản Hibernate nếu chưa có -->
-    </dependency>
 	
 	<dependency>
   		  <groupId>org.modelmapper</groupId>
@@ -68,26 +62,23 @@
 	</dependency>
 
 
-	
-
     <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-test</artifactId>
         <scope>test</scope>
     </dependency>
-    
-    <dependency>
-   		 <groupId>javax.servlet</groupId>
-   		 <artifactId>javax.servlet-api</artifactId>
-   		 <version>4.0.1</version>  <!-- hoặc 3.1.0 nếu dùng Tomcat 8 -->
-   		 <scope>provided</scope>
-	</dependency>
+
 	
 	<dependency>
     	<groupId>org.springframework.boot</groupId>
    		 <artifactId>spring-boot-starter-security</artifactId>
 	</dependency>
-	
+
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+	</dependency>
+
 	<dependency>
    		 <groupId>jakarta.validation</groupId>
    		 <artifactId>jakarta.validation-api</artifactId>
@@ -98,12 +89,6 @@
     	<artifactId>hibernate-validator</artifactId>
    		<version>8.0.1.Final</version>
 	</dependency>
-	
-	<dependency>
-    	<groupId>org.glassfish</groupId>
-   		<artifactId>jakarta.el</artifactId>
-  	 	<version>4.0.2</version>
-	</dependency>
 
     
     <dependency>
@@ -112,11 +97,24 @@
   	   	 <scope>provided</scope>
 	</dependency>
 
-    <dependency>
-    	 <groupId>org.springframework.boot</groupId>
-   		 <artifactId>spring-boot-starter-web</artifactId>
+	<dependency>
+		<groupId>org.mapstruct</groupId>
+		<artifactId>mapstruct</artifactId>
+		<version>1.5.5.Final</version> <!-- Bạn có thể dùng bản mới hơn nếu muốn -->
 	</dependency>
 
+	<!-- Annotation processor (dành cho Maven) -->
+	<dependency>
+		<groupId>org.mapstruct</groupId>
+		<artifactId>mapstruct-processor</artifactId>
+		<version>1.5.5.Final</version>
+		<scope>provided</scope>
+	</dependency>
+
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+	</dependency>
 
     
 </dependencies>
@@ -127,6 +125,25 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.10.1</version>
+				<configuration>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>1.18.30</version>
+						</path>
+						<path>
+							<groupId>org.mapstruct</groupId>
+							<artifactId>mapstruct-processor</artifactId>
+							<version>1.5.5.Final</version>
+						</path>
+					</annotationProcessorPaths>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
