--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.jpa.hibernate.ddl-auto = create
 #Cap quyen thao tac voi DB
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLMyISAMDialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
@@ -24,7 +25,7 @@ spring.jpa.properties.hibernate.format_sql = true
 
 #Chi dinh  moi truong
 #spring.profiles.active = uat
-spring.datasource.url = jdbc:mysql://localhost:3306/water
+spring.datasource.url = jdbc:mysql://localhost:3306/WaterManagement
 spring.datasource.username = root
 spring.datasource.password = 123456
 
