--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,11 +20,12 @@ spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.format_sql = true
 
 
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 
 #Chi dinh  moi truong
 #spring.profiles.active = uat
-spring.datasource.url = jdbc:mysql://localhost:3306/water
+spring.datasource.url = jdbc:mysql://localhost:3306/watermanagement
 spring.datasource.username = root
 spring.datasource.password = 123456
 
