--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,8 @@ server.port=8081
 
 #Cac thao tac voi DB
 #spring.jpa.hibernate.ddl-auto = none
-spring.jpa.hibernate.ddl-auto = create
-#spring.jpa.hibernate.ddl-auto = update
-#spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
+
 
 #Chi dinh loai DB du dung
 #Cap quyen thao tac voi DB
