--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,11 @@ spring.datasource.username = root
 spring.datasource.password = 123456
 
 
+spring.mail.host = smtp.gmail.com
+spring.mail.port = 587
+spring.mail.username = sangngo552004@gmail.com
+spring.mail.password = bqtuidtqoynflxos
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
+
+
