--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,36 +3,15 @@
 server.port=8081
 
 
-#Cac thao tac voi DB
-#spring.jpa.hibernate.ddl-auto = none
-spring.jpa.hibernate.ddl-auto = update
+# Database operations
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
-
-#Chi dinh loai DB du dung
-#Cap quyen thao tac voi DB
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLMyISAMDialect
+# Database connection
+spring.datasource.url=jdbc:mysql://root:VMoIBpKpOVZLdnWjQDjIrvbszLGoaDPe@hopper.proxy.rlwy.net:53550/railway
+spring.datasource.username=root
+spring.datasource.password=VMoIBpKpOVZLdnWjQDjIrvbszLGoaDPe
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-
-spring.jpa.show-sql = true
-spring.jpa.properties.hibernate.format_sql = true
-
-
-#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
-
-#Chi dinh  moi truong
-#spring.profiles.active = uat
-spring.datasource.url = jdbc:mysql://localhost:3306/WaterManagement
-<<<<<<< HEAD
-=======
-#=======
-#spring.datasource.url = jdbc:mysql://localhost:3306/watermanagement
->>>>>>> 0bbbbe5f50353bea023907bfcb2b52baebb571c1
-spring.datasource.username = root
-spring.datasource.password = C@0qu0c7ruc
 
 
 spring.mail.host = smtp.gmail.com
@@ -41,5 +20,4 @@ spring.mail.username = sangngo552004@gmail.com
 spring.mail.password = bqtuidtqoynflxos
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
-
 
